objects/CB_911_Escalation__c.object
<CustomObject>
    <description>These requests are to be used for IFS and Services escalations.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>911 Escalation</relationshipLabel>
        <relationshipName>X911_Escalation</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>To be filled out by Services/IFS Management when the request is approved.</inlineHelpText>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>X911_Escalations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CB_Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>911 Escalation</relationshipLabel>
        <relationshipName>X911_Escalation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact_Email__c</fullName>
        <formula>Dealer_Contact_Name__r.Email</formula>
        <label>Dealer Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This contact lookup does not have filter criteria.</description>
        <inlineHelpText>Use this contact field if the contact for the 911 Escalation is a Dealer Group corporate contact.</inlineHelpText>
        <label>Dealer Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>911 Escalation</relationshipLabel>
        <relationshipName>X911_Escalation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact_Phone__c</fullName>
        <formula>Dealer_Contact_Name__r.Phone</formula>
        <label>Dealer Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impacted_Products__c</fullName>
        <inlineHelpText>Include a list of products that are impacted by the 911. If the product is not specified, the request will be put on hold.</inlineHelpText>
        <label>Impacted Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FLS should be locked so only Admin, Service Ops, and Data Exporting can edit. All should be able to view.</description>
        <inlineHelpText>Populated by Workflow based on Status.</inlineHelpText>
        <label>IsClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Notes__c</fullName>
        <inlineHelpText>These notes are only visible to manager profiles.</inlineHelpText>
        <label>Manager Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Enter information about the escalation here.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order_In_WIP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has your order been booked? Check the WIP object on the Account. If your order is listed, check this box.</inlineHelpText>
        <label>Order In WIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Information_Notes__c</fullName>
        <inlineHelpText>Used to give more information to people who initiated the request.</inlineHelpText>
        <label>Other Information/Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Double Dipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentives were incorrect or missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takes too much time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User interface is difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this is a 911 website order, please include a link to the Recap.</inlineHelpText>
        <label>Recap</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please choose a recap that is entered against this account.</errorMessage>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Recap__c.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Recap__c</referenceTo>
        <relationshipLabel>911 Escalations</relationshipLabel>
        <relationshipName>X911_Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>X911_Escalation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Amended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Date_Requested__c</fullName>
        <inlineHelpText>The date you are requesting the work to be done by.</inlineHelpText>
        <label>Requested Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Date_to_Complete__c</fullName>
        <inlineHelpText>The projected date that the item will be completed by.</inlineHelpText>
        <label>Target Date to Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>GM Integrated Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Services Issue</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The WebID must exist on the Account you have selected.</errorMessage>
            <filterItems>
                <field>WebID__c.Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>911 Escalation</relationshipLabel>
        <relationshipName>X911_Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>What_Product_s_need_a_911__c</fullName>
        <label>What Product(s) need a 911?</label>
        <picklist>
            <picklistValues>
                <fullName>Audience Tag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core/New DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S&amp;P DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Ops PB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerBrand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerSearch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerSEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>What_needs_to_be_done__c</fullName>
        <inlineHelpText>Please describe what needs to happen. This may help justify the timeline or describe the steps that need to be taken.</inlineHelpText>
        <label>What needs to be done?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Why_Other__c</fullName>
        <inlineHelpText>Elaborate on why this 911 is being submitted if you selected &quot;Other&quot; for the Why? field.</inlineHelpText>
        <label>Why Other?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Why__c</fullName>
        <inlineHelpText>Enter the reason why you are requesting a 911.</inlineHelpText>
        <label>Why?</label>
        <picklist>
            <picklistValues>
                <fullName>Buy/Sell - New Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSM Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Web Presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Transition (FFF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Dependencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Swap</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>911 Escalation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>WebID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Services_Escalations</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>WebID__c</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Reason__c</columns>
        <columns>Dealer_Contact_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Requested_By__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed,Duplicate</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CB_911_Escalation__c.Services_Escalation</value>
        </filters>
        <label>Closed Services Escalations</label>
        <language>en_US</language>
        <sharedTo>
            <role>AccountAdvocateDirector</role>
            <role>AccountAdvocateManager</role>
            <role>ContentManager</role>
            <role>DigitalMarketingServicesDirector</role>
            <role>IFSDirector</role>
            <role>IFSManager</role>
            <role>OnlineMarketingManager</role>
            <role>OwnerMarketingServicesManager</role>
            <role>ReputationManagementManager</role>
            <role>SEOOrganicSearchManager</role>
            <role>ServiceOps</role>
            <role>ServiceOpsManager</role>
            <role>TechnicalSupportDirector</role>
            <role>Tier1Manager</role>
            <role>Tier2Manager</role>
            <role>VPofServices</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IFS_Escalations_911_Order_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>WebID__c</columns>
        <columns>Status__c</columns>
        <columns>Approved_By__c</columns>
        <columns>Target_Date_to_Complete__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CB_911_Escalation__c.Order_Escalation</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>IFS Escalations - 911 Order In Progress</label>
        <language>en_US</language>
        <queue>IFSBookingOM</queue>
        <sharedTo>
            <role>AccountAdvocateManager</role>
            <role>SystemAdministrator</role>
            <roleAndSubordinates>IFSDirector</roleAndSubordinates>
            <roleAndSubordinates>ServiceOpsManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Escalations</fullName>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>WebID__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Requested_By__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CB_911_Escalation__c.Services_Escalation</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Duplicate</value>
        </filters>
        <label>My Escalations</label>
        <language>en_US</language>
        <sharedTo>
            <role>AccountAdvocateDirector</role>
            <role>AccountAdvocateManager</role>
            <role>ContentManager</role>
            <role>DigitalMarketingServicesDirector</role>
            <role>IFSDirector</role>
            <role>IFSManager</role>
            <role>OnlineMarketingManager</role>
            <role>OwnerMarketingServicesManager</role>
            <role>ReputationManagementManager</role>
            <role>SEOOrganicSearchManager</role>
            <role>ServiceOps</role>
            <role>ServiceOpsManager</role>
            <role>TechnicalSupportDirector</role>
            <role>Tier1Manager</role>
            <role>Tier2Manager</role>
            <role>VPofServices</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Services_Escalations</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>WebID__c</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Reason__c</columns>
        <columns>Dealer_Contact_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Requested_By__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested,Working</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CB_911_Escalation__c.Services_Escalation</value>
        </filters>
        <label>Open Services Escalations</label>
        <language>en_US</language>
        <sharedTo>
            <role>AccountAdvocateDirector</role>
            <role>AccountAdvocateManager</role>
            <role>ContentManager</role>
            <role>DigitalMarketingServicesDirector</role>
            <role>IFSDirector</role>
            <role>IFSManager</role>
            <role>OnlineMarketingManager</role>
            <role>OwnerMarketingServicesManager</role>
            <role>ReputationManagementManager</role>
            <role>SEOOrganicSearchManager</role>
            <role>ServiceOps</role>
            <role>ServiceOpsManager</role>
            <role>TechnicalSupportDirector</role>
            <role>Tier1Manager</role>
            <role>Tier2Manager</role>
            <role>VPofServices</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>911 Escalation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>911 Escalation</pluralLabel>
    <recordTypes>
        <fullName>Order_Escalation</fullName>
        <active>true</active>
        <label>Order Escalation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Services_Escalation</fullName>
        <active>true</active>
        <label>Services Escalation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CB_Why_is_Other_Fill_Out_Why_Other</fullName>
        <active>true</active>
        <description>All RT: When someone fills out that the reason Why? the request is submitted is &quot;Other&quot;, they must fill out the explanation field Why Other?</description>
        <errorConditionFormula>AND( 
NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)), 
$RecordType.Name = &quot;Order Escalation&quot;, 
$Profile.Name &lt;&gt;&quot;Cobalt Cast Iron Integration&quot;, 
$Profile.Name &lt;&gt;&quot;Cobalt Service Ops Admin&quot;, 
ISPICKVAL( Why__c, &quot;Other&quot;), 
ISBLANK( Why_Other__c ) 
)</errorConditionFormula>
        <errorDisplayField>Why_Other__c</errorDisplayField>
        <errorMessage>If Why? is listed as &quot;Other&quot;, you must explain why this request is being submitted in &quot;Why Other?&quot;</errorMessage>
    </validationRules>
</CustomObject>